# ffmpegDemo2

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cpy/ffmpegdemo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: audio.aac
app/src/main/cpp/: native-lib.cpp  tutorial01.cpp  tutorial01.h
app/src/main/java/com/example/cpy/ffmpegdemo2/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/cpy/ffmpegdemo2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
